<resources>
    <string name="app_name">FirebaseTaxi</string>
    <string name="taxi_app">Taxi App</string>
    <string name="taxi_app_splash_screen_image_image">Taxi app splash screen image</string>
    <string name="i_m_a_passenger">I`m a passenger</string>
    <string name="i_m_a_driver">I`m a driver</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="input_email_error">Please input your email</string>
    <string name="input_name_error">Please input correct name (Max is 15 symbols)</string>
    <string name="wrong_pass_error">Password and confirm must be equals, cant be empty and not more, then 7 symbols</string>
    <string name="tap_to_login">Tap to login</string>
    <string name="login">Login</string>
    <string name="tap_to_sign_up">Tap to sign up</string>
    <string name="title_activity_driver_maps">Map</string>

</resources>